--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A lightweight IoC container written in TypeScript.",
   "main": "dist/inversify.js",
+  "typings": "type_definitions/inversify.d.ts",
   "directories": {
     "test": "test"
   },
@@ -23,14 +24,18 @@
     "inversion",
     "control"
   ],
-  "author": "Remo H. Jansen",
+  "author": "Remo H. Jansen <remo.jansen@wolksoftware.com> (http://www.remojansen.com/)",
+  "contributors": [],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/inversify/InversifyJS/issues"
   },
   "homepage": "http://inversify.io",
   "engines": {},
-  "dependencies": {},
+  "dependencies": {
+    "bluebird": "^2.9.34",
+    "reflect-metadata": "^0.1.1"
+  },
   "devDependencies": {
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
@@ -38,12 +43,12 @@
     "gulp-coveralls": "^0.1.4",
     "gulp-docco": "0.0.4",
     "gulp-header": "^1.7.1",
-    "gulp-run": "^1.6.10",
     "gulp-tslint": "^3.2.0",
     "gulp-typescript": "^2.8.2",
     "gulp-uglify": "^1.4.0",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.1",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
