--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "gulp-coveralls": "^0.1.4",
     "gulp-docco": "0.0.4",
     "gulp-header": "^1.7.1",
+    "gulp-rename": "^1.2.2",
     "gulp-tslint": "^3.2.0",
+    "gulp-typedoc": "^1.2.1",
     "gulp-typescript": "^2.8.2",
     "gulp-uglify": "^1.4.0",
     "karma": "^0.13.9",
